<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manymove_py_trees</name>
  <version>0.0.0</version>
  <description>Package to generate behaviortrees for manymove_manipulator using py_trees</description>
  <maintainer email="pastoriomarco@gmail.com">pastoriomarco</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>manymove_planner</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
